refactor: Change the TaskList and Todo model - Task -> TaskList - Items is now a list of Todo instead of just String - New model Todo - Updated all DTOs to reflect the new models - Refactor TaskController, TaskService and the respective tests to use the new DTOs