@@ -1,6 +1,7 @@
 package com.taskpilot.repository;
 
-import com.taskpilot.model.Task;
+import com.taskpilot.model.TaskList;
+import com.taskpilot.model.Todo;
 import com.taskpilot.model.User;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -13,6 +14,7 @@ import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -21,7 +23,7 @@ import static org.junit.jupiter.api.Assertions.*;
 
 @DataJpaTest
 @Testcontainers
-class TaskRepositoryTest {
+class TaskListRepositoryTest {
 
     @Container
     @SuppressWarnings("resource")
@@ -41,62 +43,53 @@ class TaskRepositoryTest {
     private TestEntityManager entityManager;
 
     @Autowired
-    private TaskRepository taskRepository;
+    private TaskListRepository taskListRepository;
 
     // Tests for findByIdAndUser()
     @Test
     @DisplayName("findByIdAndUser() should return task when id exists and user matches")
     void findByIdAndUser_ShouldReturnTask_WhenIdExistsAndUserMatches() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
-        Task task = createAndPersistTask("Test Task", "Description", List.of("Item 1", "Item 2"), user);
+        TaskList taskList = createAndPersistTask("Test Task", "Description", List.of("Item 1", "Item 2"), user);
 
-        // ACT
-        Optional<Task> result = taskRepository.findByIdAndUser(task.getId(), user);
+        Optional<TaskList> result = taskListRepository.findByIdAndUser(taskList.getId(), user);
 
-        // ASSERT
         assertTrue(result.isPresent());
         assertEquals("Test Task", result.get().getTitle());
         assertEquals(user.getId(), result.get().getUser().getId());
+        assertEquals(2, result.get().getItems().size());
+        assertEquals("Item 1", result.get().getItems().getFirst().getContent());
     }
 
     @Test
     @DisplayName("findByIdAndUser() should return empty when id exists but user does not match")
     void findByIdAndUser_ShouldReturnEmpty_WhenIdExistsButUserDoesNotMatch() {
-        // ARRANGE
         User user1 = createAndPersistUser("john@example.com");
         User user2 = createAndPersistUser("jane@example.com");
-        Task task = createAndPersistTask("Test Task", "Description", List.of("Item 1"), user1);
+        TaskList taskList = createAndPersistTask("Test Task", "Description", List.of("Item 1"), user1);
 
-        // ACT
-        Optional<Task> result = taskRepository.findByIdAndUser(task.getId(), user2);
+        Optional<TaskList> result = taskListRepository.findByIdAndUser(taskList.getId(), user2);
 
-        // ASSERT
         assertTrue(result.isEmpty());
     }
 
     @Test
     @DisplayName("findByIdAndUser() should return empty when id does not exist")
     void findByIdAndUser_ShouldReturnEmpty_WhenIdDoesNotExist() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
 
-        // ACT
-        Optional<Task> result = taskRepository.findByIdAndUser(999L, user);
+        Optional<TaskList> result = taskListRepository.findByIdAndUser(999L, user);
 
-        // ASSERT
         assertTrue(result.isEmpty());
     }
 
     @Test
     @DisplayName("findByIdAndUser() should handle null task id")
     void findByIdAndUser_ShouldHandleNull_TaskId() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
 
-        // ACT & ASSERT
         assertDoesNotThrow(() -> {
-            Optional<Task> result = taskRepository.findByIdAndUser(null, user);
+            Optional<TaskList> result = taskListRepository.findByIdAndUser(null, user);
             assertTrue(result.isEmpty());
         });
     }
@@ -104,13 +97,11 @@ class TaskRepositoryTest {
     @Test
     @DisplayName("findByIdAndUser() should handle null user")
     void findByIdAndUser_ShouldHandleNull_User() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
-        Task task = createAndPersistTask("Test Task", "Description", List.of("Item 1"), user);
+        TaskList taskList = createAndPersistTask("Test Task", "Description", List.of("Item 1"), user);
 
-        // ACT & ASSERT
         assertDoesNotThrow(() -> {
-            Optional<Task> result = taskRepository.findByIdAndUser(task.getId(), null);
+            Optional<TaskList> result = taskListRepository.findByIdAndUser(taskList.getId(), null);
             assertTrue(result.isEmpty());
         });
     }
@@ -119,63 +110,51 @@ class TaskRepositoryTest {
     @Test
     @DisplayName("deleteByIdAndUser() should delete task when id exists and user matches")
     void deleteByIdAndUser_ShouldDeleteTask_WhenIdExistsAndUserMatches() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
-        Task task = createAndPersistTask("Task to Delete", "Description", List.of("Item 1"), user);
-        Long taskId = task.getId();
+        TaskList taskList = createAndPersistTask("Task to Delete", "Description", List.of("Item 1"), user);
+        Long taskId = taskList.getId();
 
-        // ACT
-        int deletedCount = taskRepository.deleteByIdAndUser(taskId, user);
+        int deletedCount = taskListRepository.deleteByIdAndUser(taskId, user);
         entityManager.flush();
         entityManager.clear();
 
-        // ASSERT
         assertEquals(1, deletedCount);
-        Optional<Task> deletedTask = taskRepository.findById(taskId);
+        Optional<TaskList> deletedTask = taskListRepository.findById(taskId);
         assertTrue(deletedTask.isEmpty());
     }
 
     @Test
     @DisplayName("deleteByIdAndUser() should return 0 when id exists but user does not match")
     void deleteByIdAndUser_ShouldReturn0_WhenIdExistsButUserDoesNotMatch() {
-        // ARRANGE
         User user1 = createAndPersistUser("john@example.com");
         User user2 = createAndPersistUser("jane@example.com");
-        Task task = createAndPersistTask("Task to Delete", "Description", List.of("Item 1"), user1);
+        TaskList taskList = createAndPersistTask("Task to Delete", "Description", List.of("Item 1"), user1);
 
-        // ACT
-        int deletedCount = taskRepository.deleteByIdAndUser(task.getId(), user2);
+        int deletedCount = taskListRepository.deleteByIdAndUser(taskList.getId(), user2);
         entityManager.flush();
 
-        // ASSERT
         assertEquals(0, deletedCount);
-        // Verify task still exists
-        Optional<Task> existingTask = taskRepository.findById(task.getId());
+        Optional<TaskList> existingTask = taskListRepository.findById(taskList.getId());
         assertTrue(existingTask.isPresent());
     }
 
     @Test
     @DisplayName("deleteByIdAndUser() should return 0 when id does not exist")
     void deleteByIdAndUser_ShouldReturn0_WhenIdDoesNotExist() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
 
-        // ACT
-        int deletedCount = taskRepository.deleteByIdAndUser(999L, user);
+        int deletedCount = taskListRepository.deleteByIdAndUser(999L, user);
 
-        // ASSERT
         assertEquals(0, deletedCount);
     }
 
     @Test
     @DisplayName("deleteByIdAndUser() should handle null task id")
     void deleteByIdAndUser_ShouldHandleNull_TaskId() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
 
-        // ACT & ASSERT
         assertDoesNotThrow(() -> {
-            int deletedCount = taskRepository.deleteByIdAndUser(null, user);
+            int deletedCount = taskListRepository.deleteByIdAndUser(null, user);
             assertEquals(0, deletedCount);
         });
     }
@@ -183,13 +162,11 @@ class TaskRepositoryTest {
     @Test
     @DisplayName("deleteByIdAndUser() should handle null user")
     void deleteByIdAndUser_ShouldHandleNull_User() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
-        Task task = createAndPersistTask("Test Task", "Description", List.of("Item 1"), user);
+        TaskList taskList = createAndPersistTask("Test Task", "Description", List.of("Item 1"), user);
 
-        // ACT & ASSERT
         assertDoesNotThrow(() -> {
-            int deletedCount = taskRepository.deleteByIdAndUser(task.getId(), null);
+            int deletedCount = taskListRepository.deleteByIdAndUser(taskList.getId(), null);
             assertEquals(0, deletedCount);
         });
     }
@@ -198,106 +175,89 @@ class TaskRepositoryTest {
     @Test
     @DisplayName("deleteByIdInAndUser() should delete multiple tasks when ids exist and user matches")
     void deleteByIdInAndUser_ShouldDeleteMultipleTasks_WhenIdsExistAndUserMatches() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
-        Task task1 = createAndPersistTask("Task 1", "Description 1", List.of("Item 1"), user);
-        Task task2 = createAndPersistTask("Task 2", "Description 2", List.of("Item 2"), user);
-        Task task3 = createAndPersistTask("Task 3", "Description 3", List.of("Item 3"), user);
+        TaskList taskList1 = createAndPersistTask("Task 1", "Description 1", List.of("Item 1"), user);
+        TaskList taskList2 = createAndPersistTask("Task 2", "Description 2", List.of("Item 2"), user);
+        TaskList taskList3 = createAndPersistTask("Task 3", "Description 3", List.of("Item 3"), user);
 
-        List<Long> taskIds = List.of(task1.getId(), task2.getId());
+        List<Long> taskIds = List.of(taskList1.getId(), taskList2.getId());
 
-        // ACT
-        int deletedCount = taskRepository.deleteByIdInAndUser(taskIds, user);
+        int deletedCount = taskListRepository.deleteByIdInAndUser(taskIds, user);
         entityManager.flush();
         entityManager.clear();
 
-        // ASSERT
         assertEquals(2, deletedCount);
-        assertTrue(taskRepository.findById(task1.getId()).isEmpty());
-        assertTrue(taskRepository.findById(task2.getId()).isEmpty());
-        assertTrue(taskRepository.findById(task3.getId()).isPresent()); // Should still exist
+        assertTrue(taskListRepository.findById(taskList1.getId()).isEmpty());
+        assertTrue(taskListRepository.findById(taskList2.getId()).isEmpty());
+        assertTrue(taskListRepository.findById(taskList3.getId()).isPresent());
     }
 
     @Test
     @DisplayName("deleteByIdInAndUser() should delete only tasks belonging to the user")
     void deleteByIdInAndUser_ShouldDeleteOnly_TasksBelongingToUser() {
-        // ARRANGE
         User user1 = createAndPersistUser("john@example.com");
         User user2 = createAndPersistUser("jane@example.com");
-        Task task1 = createAndPersistTask("User1 Task 1", "Description", List.of("Item 1"), user1);
-        Task task2 = createAndPersistTask("User1 Task 2", "Description", List.of("Item 2"), user1);
-        Task task3 = createAndPersistTask("User2 Task", "Description", List.of("Item 3"), user2);
+        TaskList taskList1 = createAndPersistTask("User1 Task 1", "Description", List.of("Item 1"), user1);
+        TaskList taskList2 = createAndPersistTask("User1 Task 2", "Description", List.of("Item 2"), user1);
+        TaskList taskList3 = createAndPersistTask("User2 Task", "Description", List.of("Item 3"), user2);
 
-        List<Long> taskIds = List.of(task1.getId(), task2.getId(), task3.getId());
+        List<Long> taskIds = List.of(taskList1.getId(), taskList2.getId(), taskList3.getId());
 
-        // ACT
-        int deletedCount = taskRepository.deleteByIdInAndUser(taskIds, user1);
+        int deletedCount = taskListRepository.deleteByIdInAndUser(taskIds, user1);
         entityManager.flush();
         entityManager.clear();
 
-        // ASSERT
-        assertEquals(2, deletedCount); // Only user1's tasks should be deleted
-        assertTrue(taskRepository.findById(task1.getId()).isEmpty());
-        assertTrue(taskRepository.findById(task2.getId()).isEmpty());
-        assertTrue(taskRepository.findById(task3.getId()).isPresent()); // user2's task should remain
+        assertEquals(2, deletedCount);
+        assertTrue(taskListRepository.findById(taskList1.getId()).isEmpty());
+        assertTrue(taskListRepository.findById(taskList2.getId()).isEmpty());
+        assertTrue(taskListRepository.findById(taskList3.getId()).isPresent());
     }
 
     @Test
     @DisplayName("deleteByIdInAndUser() should return 0 when no ids match user's tasks")
     void deleteByIdInAndUser_ShouldReturn0_WhenNoIdsMatchUserTasks() {
-        // ARRANGE
         User user1 = createAndPersistUser("john@example.com");
         User user2 = createAndPersistUser("jane@example.com");
-        Task task = createAndPersistTask("User1 Task", "Description", List.of("Item 1"), user1);
+        TaskList taskList = createAndPersistTask("User1 Task", "Description", List.of("Item 1"), user1);
 
-        List<Long> taskIds = List.of(task.getId());
+        List<Long> taskIds = List.of(taskList.getId());
 
-        // ACT
-        int deletedCount = taskRepository.deleteByIdInAndUser(taskIds, user2);
+        int deletedCount = taskListRepository.deleteByIdInAndUser(taskIds, user2);
 
-        // ASSERT
         assertEquals(0, deletedCount);
-        assertTrue(taskRepository.findById(task.getId()).isPresent()); // Task should still exist
+        assertTrue(taskListRepository.findById(taskList.getId()).isPresent());
     }
 
     @Test
     @DisplayName("deleteByIdInAndUser() should return 0 when ids list is empty")
     void deleteByIdInAndUser_ShouldReturn0_WhenIdsListIsEmpty() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
 
-        // ACT
-        int deletedCount = taskRepository.deleteByIdInAndUser(Collections.emptyList(), user);
+        int deletedCount = taskListRepository.deleteByIdInAndUser(Collections.emptyList(), user);
 
-        // ASSERT
         assertEquals(0, deletedCount);
     }
 
     @Test
     @DisplayName("deleteByIdInAndUser() should handle non-existent ids gracefully")
     void deleteByIdInAndUser_ShouldHandleNonExistentIds_Gracefully() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
         List<Long> nonExistentIds = List.of(999L, 1000L);
 
-        // ACT
-        int deletedCount = taskRepository.deleteByIdInAndUser(nonExistentIds, user);
+        int deletedCount = taskListRepository.deleteByIdInAndUser(nonExistentIds, user);
 
-        // ASSERT
         assertEquals(0, deletedCount);
     }
 
     @Test
     @DisplayName("deleteByIdInAndUser() should handle null user")
     void deleteByIdInAndUser_ShouldHandleNull_User() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
-        Task task = createAndPersistTask("Test Task", "Description", List.of("Item 1"), user);
-        List<Long> taskIds = Collections.singletonList(task.getId());
+        TaskList taskList = createAndPersistTask("Test Task", "Description", List.of("Item 1"), user);
+        List<Long> taskIds = Collections.singletonList(taskList.getId());
 
-        // ACT & ASSERT
         assertDoesNotThrow(() -> {
-            int deletedCount = taskRepository.deleteByIdInAndUser(taskIds, null);
+            int deletedCount = taskListRepository.deleteByIdInAndUser(taskIds, null);
             assertEquals(0, deletedCount);
         });
     }
@@ -306,52 +266,52 @@ class TaskRepositoryTest {
     @Test
     @DisplayName("save() should persist task with all properties")
     void save_ShouldPersistTask_WithAllProperties() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
-        Task task = new Task("Test Task", "Test Description", List.of("Item 1", "Item 2", "Item 3"), user);
+        TaskList taskList = new TaskList();
+        taskList.setTitle("Test Task");
+        taskList.setDescription("Test Description");
+        taskList.setUser(user);
+        attachTodos(taskList, List.of("Item 1", "Item 2", "Item 3"));
 
-        // ACT
-        Task savedTask = taskRepository.save(task);
+        TaskList savedTaskList = taskListRepository.save(taskList);
 
-        // ASSERT
-        assertNotNull(savedTask.getId());
-        assertEquals("Test Task", savedTask.getTitle());
-        assertEquals("Test Description", savedTask.getDescription());
-        assertEquals(3, savedTask.getItems().size());
-        assertTrue(savedTask.getItems().contains("Item 1"));
-        assertTrue(savedTask.getItems().contains("Item 2"));
-        assertTrue(savedTask.getItems().contains("Item 3"));
-        assertEquals(user.getId(), savedTask.getUser().getId());
-        assertNotNull(savedTask.getCreatedAt());
-        assertNotNull(savedTask.getUpdatedAt());
+        assertNotNull(savedTaskList.getId());
+        assertEquals("Test Task", savedTaskList.getTitle());
+        assertEquals("Test Description", savedTaskList.getDescription());
+        assertEquals(3, savedTaskList.getItems().size());
+        List<String> contents = savedTaskList.getItems().stream().map(Todo::getContent).toList();
+        assertTrue(contents.contains("Item 1"));
+        assertTrue(contents.contains("Item 2"));
+        assertTrue(contents.contains("Item 3"));
+        assertEquals(user.getId(), savedTaskList.getUser().getId());
+        assertNotNull(savedTaskList.getCreatedAt());
+        assertNotNull(savedTaskList.getUpdatedAt());
     }
 
     @Test
     @DisplayName("save() should handle task with empty items list")
     void save_ShouldHandleTask_WithEmptyItemsList() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
-        Task task = new Task("Test Task", "Test Description", Collections.emptyList(), user);
+        TaskList taskList = new TaskList();
+        taskList.setTitle("Test Task");
+        taskList.setDescription("Test Description");
+        taskList.setUser(user);
+        taskList.setItems(new ArrayList<>());
 
-        // ACT
-        Task savedTask = taskRepository.save(task);
+        TaskList savedTaskList = taskListRepository.save(taskList);
 
-        // ASSERT
-        assertNotNull(savedTask.getId());
-        assertTrue(savedTask.getItems().isEmpty());
+        assertNotNull(savedTaskList.getId());
+        assertTrue(savedTaskList.getItems().isEmpty());
     }
 
     @Test
     @DisplayName("findById() should return task when id exists")
     void findById_ShouldReturnTask_WhenIdExists() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
-        Task task = createAndPersistTask("Test Task", "Description", List.of("Item 1"), user);
+        TaskList taskList = createAndPersistTask("Test Task", "Description", List.of("Item 1"), user);
 
-        // ACT
-        Optional<Task> result = taskRepository.findById(task.getId());
+        Optional<TaskList> result = taskListRepository.findById(taskList.getId());
 
-        // ASSERT
         assertTrue(result.isPresent());
         assertEquals("Test Task", result.get().getTitle());
     }
@@ -359,40 +319,32 @@ class TaskRepositoryTest {
     @Test
     @DisplayName("findById() should return empty when id does not exist")
     void findById_ShouldReturnEmpty_WhenIdDoesNotExist() {
-        // ACT
-        Optional<Task> result = taskRepository.findById(999L);
+        Optional<TaskList> result = taskListRepository.findById(999L);
 
-        // ASSERT
         assertTrue(result.isEmpty());
     }
 
     @Test
     @DisplayName("count() should return correct number of tasks")
     void count_ShouldReturnCorrectNumber_OfTasks() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
         createAndPersistTask("Task 1", "Description 1", List.of("Item 1"), user);
         createAndPersistTask("Task 2", "Description 2", List.of("Item 2"), user);
 
-        // ACT
-        long count = taskRepository.count();
+        long count = taskListRepository.count();
 
-        // ASSERT
         assertEquals(2, count);
     }
 
     @Test
     @DisplayName("findAll() should return all tasks")
     void findAll_ShouldReturnAllTasks() {
-        // ARRANGE
         User user = createAndPersistUser("john@example.com");
         createAndPersistTask("Task 1", "Description 1", List.of("Item 1"), user);
         createAndPersistTask("Task 2", "Description 2", List.of("Item 2"), user);
 
-        // ACT
-        List<Task> result = taskRepository.findAll();
+        List<TaskList> result = taskListRepository.findAll();
 
-        // ASSERT
         assertEquals(2, result.size());
         assertTrue(result.stream().anyMatch(task -> "Task 1".equals(task.getTitle())));
         assertTrue(result.stream().anyMatch(task -> "Task 2".equals(task.getTitle())));
@@ -406,8 +358,25 @@ class TaskRepositoryTest {
         return entityManager.persistAndFlush(user);
     }
 
-    private Task createAndPersistTask(String title, String description, List<String> items, User user) {
-        Task task = new Task(title, description, items, user);
-        return entityManager.persistAndFlush(task);
+    private TaskList createAndPersistTask(String title, String description, List<String> items, User user) {
+        TaskList taskList = new TaskList();
+        taskList.setTitle(title);
+        taskList.setDescription(description);
+        taskList.setUser(user);
+        attachTodos(taskList, items);
+        return entityManager.persistAndFlush(taskList);
+    }
+
+    private void attachTodos(TaskList parent, List<String> contents) {
+        List<Todo> todos = new ArrayList<>();
+        for (String c : contents) {
+            Todo t = new Todo();
+            t.setContent(c);
+            t.setChecked(false);
+            t.setDeadline(null);
+            t.setTaskList(parent);
+            todos.add(t);
+        }
+        parent.setItems(todos);
     }
 }
